야후 파이낸스를 이용한 etf 상세 조회에 차트 생성 (#47)
* 야후파이낸스 + 차트

* 주식 상세 조회 페이지에서 조회 시 etf 종목 코드를 이용해 뒤에 .KS를 붙이는 식으로 야후 파이낸스를 이용해 검색 후 차트 생성

* feat: 드롭다운 형식의 검색 구현 및 페이징 없는 검색 구현

* CSV파일 수정으로 검색 오류 수정.
서비스명 업뎃.

* etf 조회시 불필요한 dto 작업 제거하는 코드수정 및 프론트에서 불필요한 중복코드 제거.
etf 테스트 최신화

* 테스트 가라

* 프론트 오류 수정.